# CALM-trading-system

./: .gitignore  CMakeLists.txt  README.md  historian.cpp  trader.cpp
lib/: CMakeLists.txt
lib/algo/: README.md  algo_engine.cpp  algo_engine.h
lib/cfg/: cfg.cpp  cfg.h  hist_download.yaml  risk_manager.yaml
lib/core/: README.md  event.cpp  event.h  event_engine.cpp  event_engine.h  market_data.cpp  market_data.h  portfolio.cpp  portfolio.h  risk.cpp  risk.h  trader.cpp  trader.h  trading_engine.cpp  trading_engine.h
lib/data/: README.md  data_recorder.cpp  data_recorder.h  historical_data.cpp  historical_data.h
lib/database/: redis_client.cpp  redis_client.h
lib/gateway/: api.cpp  api.h  gateway.cpp  gateway.h
lib/objects/: constants.h  enums.cpp  enums.h  objects.cpp  objects.h  utils.cpp  utils.h
lib/utils/: lock_based_queue.h  logging.cpp  logging.h  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/TestCppClient/: Main.cpp
tests/algo/: CMakeLists.txt  test_mq.cpp
tests/core/: CMakeLists.txt  test_event.cpp  test_trader.cpp  test_trading_engine.cpp
tests/database/: CMakeLists.txt  test_redis.cpp
tests/gateway/: CMakeLists.txt  test_ib_api.cpp
tests/quick_test/: CMakeLists.txt  quick_test.cpp  super_quick_test.cpp
tests/quick_test/examples/: arrow.cpp  datetime.cpp  hiredis.cpp  register_class_member_func.cpp  yaml.cpp
tests/utils/: CMakeLists.txt  test_queue.cpp
